--- a/aula5/atividades/3/index.css
+++ b/aula5/atividades/3/index.css
@@ -1,11 +1,21 @@
-#um{
+#um{ 
 
+ font-family: Arial, Helvetica, sans-serif;
+ color: red;
+    
 }
 
 #dois{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 22px;
+    color: green;
+    
 
 }
 
 #tres{
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-size: 14px;
+    font-weight: 450;
 
 }
