--- a/aula5/atividades/2/style.css
+++ b/aula5/atividades/2/style.css
@@ -1,9 +1,16 @@
 body{
     background-color: aquamarine;
-    background-image:  url(https://pa1.aminoapps.com/6805/890a6c53b41ef50171ea050c214ae3f048df95da_hq.gif);
+   /* background-image:  url(https://pa1.aminoapps.com/6805/890a6c53b41ef50171ea050c214ae3f048df95da_hq.gif);
     background-position: right top;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: fixed; */
 
     
+}
+
+.galeria img{
+    width: 25%;
+    height: auto;
+    position: fixed;
+    position;
 }
