--- a/exercicio senai/pagina1/style.css
+++ b/exercicio senai/pagina1/style.css
@@ -1,5 +1,46 @@
 /* ferrou */
-
+*{
+    padding: 0%;
+    margin: 0%;
+}
 header{
-background-color: rgb(32, 41, 173);
+    background-color: rgb(32, 41, 173);
+    color: white;
+    padding: 10px 0;
+    text-align: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
+
+.esquerda{
+    justify-content: end;
+    display: flex;
+    flex-direction: row;
+    padding: 24px;
+}
+
+.letra{
+    padding: 5px;
+    font-size: px;
+    margin-left: 15px;
+
+}
+
+footer {
+    background-color: rgb(32, 41, 173);
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+
+footer p {
+    margin: 5px 0;
 }
