--- a/exercicio senai/pagina1/style.css
+++ b/exercicio senai/pagina1/style.css
@@ -3,44 +3,64 @@
     padding: 0%;
     margin: 0%;
 }
-header{
+
+.header{
     background-color: rgb(32, 41, 173);
     color: white;
     padding: 10px 0;
-    text-align: center;
-    position: fixed;
+    position: sticky;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 1000;
 }
 
+#senai{
+    width: 50%;
+}
 
 .esquerda{
     justify-content: end;
     display: flex;
     flex-direction: row;
-    padding: 24px;
+    padding-right: 5%;
+       
 }
 
 .letra{
-    padding: 5px;
-    font-size: px;
-    margin-left: 15px;
+    padding-top: 25%;
+    padding-bottom: 25%;
+    font-size: 17px;
+    margin-left: 25%;
 
 }
 
-footer {
+.body{
+    width: 100%;
+    height: 85vw;
+    display: flex;
+    flex-direction: row;
+    
+}
+
+.footer {
     background-color: rgb(32, 41, 173);
     color: white;
     text-align: center;
     padding: 10px 0;
-    position: fixed;
+    position: static;
     bottom: 0;
     left: 0;
     width: 100%;
 }
 
-footer p {
+.footer p {
     margin: 5px 0;
+}
+
+img{
+    width: 35%;
 }
