--- a/exercicio senai/pagina1/style_index.css
+++ b/exercicio senai/pagina1/style_index.css
@@ -1,6 +1,6 @@
 .body{
     width: 100%;
-    height: 85vw;
+    height: 50vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,17 +10,27 @@
 #organizador{
     display: flex;
     flex-direction: row;
-    width: 70%;
+    width: 100vw;
 }
 
 .escolha{
-    display: block;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+    flex-direction: column;
     
-}.escolha div{
-    width: 50%;
 }
+
 .escolha img{
-    width: 20rem;
-
+    width: 70%;
+    
 }
 
+.escolha div{
+
+    display: flex;
+    flex-direction: column;
+
+}
