--- a/exercicio senai/pagina1/style_index.css
+++ b/exercicio senai/pagina1/style_index.css
@@ -1,10 +1,16 @@
-.body{
+body{
+    overflow-x:hidden ;
+}
+
+
+.corpo{
     width: 100%;
     height: 50vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    flex-grow: 1;
 }
 
 #organizador{
