--- a/exercicio senai/style_header.css
+++ b/exercicio senai/style_header.css
@@ -1,4 +1,11 @@
 /* ferrou */
+body{
+    overflow-x:hidden ;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 *{
     padding: 0%;
     margin: 0%;
@@ -27,7 +34,11 @@
     display: flex;
     flex-direction: row;
     padding-right: 5%;
-       
+    
+}
+
+.esquerda li{
+    list-style: none;
 }
 
 .letra{
@@ -49,9 +60,4 @@
     bottom: 0;
     left: 0;
     width: 100%;
-}
-
-.footer p {
-    margin: 5px 0;
-}
-
+} 
