ficou mais ou menos, mas é melhor que nada

--- a/exercicio senai/pagina1/style_index.css
+++ b/exercicio senai/pagina1/style_index.css
@@ -12,7 +12,10 @@ body{
     text-align: center;
     flex-grow: 1;
 }
-
+.corpo a{
+    color: initial;
+    text-decoration: none;
+}
 #organizador{
     display: flex;
     flex-direction: row;
