--- a/exercicio senai/pagina2/style_login.css
+++ b/exercicio senai/pagina2/style_login.css
@@ -10,9 +10,10 @@ body{
     width: 100%;
     height: 50vw;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     text-align: center;
+    justify-content: center;
     flex-grow: 1;
 }
 
@@ -20,6 +21,9 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background-color: beige;
-    width: 10vw;
+    width: 40vw;
+    height: 20vw;
+    
 }
